test/type_errors/int_redeclaration.go
package main

import "fmt"

func main ( ) {
    var a int = 5
    var a int = 10
    }